# SPECS

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  index.html  package.json  playwright.config.ts  run.sh  tsconfig.json  tsconfig.node.json  vite.config.ts
.claude/skills/create-release/: SKILL.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  release.yml
.playwright-mcp/: page-2026-05-11T13-55-56-967Z.yml  page-2026-05-11T15-00-20-975Z.yml
docs/: development.md
docs/screens/: README.md
docs/test-scenarios/: README.md
docs/test-scenarios/full-playthrough/: README.md  constraints.md
docs/vsa/: README.md
docs/vsa/react/: examples.md  slice-template.md
packaging/: SETUP.md
public/: splash.js
scripts/: build-nodes.lib.ts  build-nodes.test.ts  build-nodes.ts  convert-game-data.ts  fetch-icons.ts  fetch-map.ts
scripts/fixtures/: recipe-tiers-v1.1.json  satisfactory-calculator-gamedata-1.2.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/capabilities/: cross-window.json
src-tauri/game-data/: nodes.json  v0.1.json  v1.1.json  v1.2.json
src-tauri/icons/: icon.icns
src-tauri/migrations/app/: V0001__shared__init.sql
src-tauri/migrations/playthrough/: V0001__shared__init.sql  V0002__factory__create.sql  V0003__logistics__create.sql  V0004__trains__create.sql  V0005__alts_and_somersloop.sql  V0007__power_gen.sql  V0008__factory_icon.sql  V0009__resource_node_claim.sql  V0010__factory_machine_layout.sql  V0011__power_gen_position.sql  V0012__factory_plan.sql  V0013__water_extractor_group.sql  V0014__water_group_locked.sql  V0015__plan_target_export.sql  V0016__plan_options.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/alts/: README.md  commands.rs  dto.rs  mod.rs  repo.rs
src-tauri/src/features/elevator/: README.md  commands.rs  dto.rs  mod.rs
src-tauri/src/features/factory/: README.md  commands.rs  domain.rs  dto.rs  mod.rs  repo.rs
src-tauri/src/features/health/: README.md  commands.rs  dto.rs  mod.rs
src-tauri/src/features/logistics/: README.md  commands.rs  domain.rs  dto.rs  mod.rs  repo.rs
src-tauri/src/features/planner/: commands.rs  domain.rs  dto.rs  mod.rs  repo.rs  solver.rs
src-tauri/src/features/playthrough/: README.md  commands.rs  dto.rs  mod.rs  repo.rs  state.rs
src-tauri/src/features/power/: README.md  commands.rs  domain.rs  dto.rs  mod.rs  repo.rs
src-tauri/src/features/resource_nodes/: commands.rs  domain.rs  dto.rs  mod.rs  repo.rs
src-tauri/src/features/trains/: README.md  commands.rs  domain.rs  dto.rs  mod.rs  repo.rs
src-tauri/src/features/validation/: README.md  commands.rs  domain.rs  dto.rs  mod.rs
src-tauri/src/shared/: error.rs  mod.rs  paths.rs  types.rs
src-tauri/src/shared/db/: app_db.rs  migrations.rs  mod.rs  playthrough_db.rs
src-tauri/src/shared/gamedata/: loader.rs  mod.rs  store.rs  types.rs
src/app/: AppShell.tsx
src/shared/: build-info.ts  nav-store.ts
tests/e2e/: screenshots.spec.ts
(+145 files in other folders)
